k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: my-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: b1.hwang-chat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lol-service
                port:
                  number: 3050
