k8s/ingress/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: confluent
  name: kafka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: b0.hwang-chat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-0-internal
                port:
                  number: 9092
